--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,12 @@
 {
   "name": "@joelcox22/app",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "WIP - a simple kubernetes app framework. Not recommended for anyone to use at this point.",
   "license": "MIT",
-  "exports": "./mod.ts",
+  "exports": {
+    ".": "./mod.ts",
+    "./app": "./src/cli/program.ts"
+  },
   "imports": {
     "app": "./mod.ts",
     "commander": "npm:commander@^12.1.0",
